0.7/_sources/checks_gallery/tabular/data_integrity/plot_special_chars.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/data_integrity/plot_special_chars.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_data_integrity_plot_special_chars.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_data_integrity_plot_special_chars.py:


Special Characters
******************

.. GENERATED FROM PYTHON SOURCE LINES 8-13

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular.checks import SpecialCharacters








.. GENERATED FROM PYTHON SOURCE LINES 14-34

.. code-block:: default


    data = {'col1': [' ', '!', '"', '#', '$', '%', '&', '\'','(', ')',
                     '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', 
                     '>', '?', '@', '[', ']', '\\', '^', '_', '`', '{',
                     '}', '|', '~', '\n'],
            'col2':['v', 'v', 'v', 'v4', 'v5', 'v6', 'v7', 'v8','v9','v10', 
                     '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', 
                     '>', '?', '@', '[', ']', '\\', '^', '_', '`', '{',
                     '}', '|', '~', '\n'],
            'col3': [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,11,1,'???#',1,1,1,1,1,1,1,1,1,1,1],
            'col4': [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,11,1,1,1,1,1,1,1,1,1,1,1,1,1],
            'col5': ['valid1','valid2','valid3','valid4','valid5','valid6','valid7',
                     'valid8','valid9','valid10','valid11','valid12',
                    'valid13','valid14','inval!d15','valid16','valid17','valid18',
                     'valid19','valid20','valid21','valid22','valid23','valid24','valid25',
                    'valid26', 'valid27','valid28','valid29','valid30','valid31','32','33','34']}


    dataframe = pd.DataFrame(data=data)
    SpecialCharacters().run(dataframe)




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /home/runner/work/deepchecks/deepchecks/deepchecks/tabular/dataset.py:886: UserWarning:

    Received a "pandas.DataFrame" instance. It is recommended to pass a "deepchecks.tabular.Dataset" instance by doing "Dataset(dataframe)"

    /home/runner/work/deepchecks/deepchecks/deepchecks/tabular/dataset.py:581: UserWarning:

    It is recommended to initialize Dataset with categorical features by doing "Dataset(df, cat_features=categorical_list)". No categorical features were passed, therefore heuristically inferring categorical features in the data.
    0 categorical features were inferred



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Special Characters</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "edea85a29bd8418ebfa8a3b2c122194e": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_36d3fbd8a01d42b4af4d338c1dc02a89",
              "IPY_MODEL_bf63425eb5ec47e280d430028b92a641",
              "IPY_MODEL_b4461be7bf2842be90d3d44a76f0453c",
              "IPY_MODEL_e0256542d6ed4a55a37e6c859dae8e17"
            ],
            "layout": "IPY_MODEL_bf2677b3e5fa40d0b108f21a67d07b69"
          }
        },
        "36d3fbd8a01d42b4af4d338c1dc02a89": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_86706dc2c48a4f349eb3880f31ded105",
            "style": "IPY_MODEL_955123540c7342d08e0c85d7e9bde556",
            "value": "<h4><b>Special Characters</b></h4>"
          }
        },
        "86706dc2c48a4f349eb3880f31ded105": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "955123540c7342d08e0c85d7e9bde556": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "bf63425eb5ec47e280d430028b92a641": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_5f858f1ce0a34359a1a6e539f2c09834",
            "style": "IPY_MODEL_b83e643fdd1549aca6419b2ce3554683",
            "value": "<p>Search in column[s] for values that contains only special characters.</p>"
          }
        },
        "5f858f1ce0a34359a1a6e539f2c09834": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "b83e643fdd1549aca6419b2ce3554683": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b4461be7bf2842be90d3d44a76f0453c": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_2f95dbb7dacc4e1c96bbc0ffc19b23a6",
            "style": "IPY_MODEL_a074d41e942148c7a608963011f875e5"
          }
        },
        "2f95dbb7dacc4e1c96bbc0ffc19b23a6": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "a074d41e942148c7a608963011f875e5": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "e0256542d6ed4a55a37e6c859dae8e17": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_5f4a0ed969094698a2c5792fb35060ac",
              "IPY_MODEL_d4e55c3330c44b0e903dbf9649d6b78a",
              "IPY_MODEL_03ce25f5c398415c98eac220e776a9cb"
            ],
            "layout": "IPY_MODEL_bfcdda9fa2e0480f944d6167143b18e0"
          }
        },
        "5f4a0ed969094698a2c5792fb35060ac": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_af6fee2462514adcb8aeab58d7d832f0",
            "style": "IPY_MODEL_c08a7abdf21d47ff861f8d1d18e1c9c0",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "af6fee2462514adcb8aeab58d7d832f0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c08a7abdf21d47ff861f8d1d18e1c9c0": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "d4e55c3330c44b0e903dbf9649d6b78a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c2ebe9bfd91047b8b09335bb5652548e",
            "style": "IPY_MODEL_1c05ad3a9899456a8bff438c104c4b0a",
            "value": "<div>* showing only the top 10 columns, you can change it using n_top_columns param</div>"
          }
        },
        "c2ebe9bfd91047b8b09335bb5652548e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "1c05ad3a9899456a8bff438c104c4b0a": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "03ce25f5c398415c98eac220e776a9cb": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_f6fc98259b4d40318184835742cb3754",
            "style": "IPY_MODEL_a1d2513211be47d4bcf9bc4404f4f352",
            "value": "<style type=\"text/css\">\n#T_931ed_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_931ed_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_931ed_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_931ed_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_931ed_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_931ed_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >% Special-Only Samples</th>\n      <th class=\"col_heading level0 col1\" >Most Common Special-Only Samples</th>\n    </tr>\n    <tr>\n      <th class=\"index_name level0\" >Column Name</th>\n      <th class=\"blank col0\" >&nbsp;</th>\n      <th class=\"blank col1\" >&nbsp;</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_931ed_level0_row0\" class=\"row_heading level0 row0\" >col1</th>\n      <td id=\"T_931ed_row0_col0\" class=\"data row0 col0\" >100%</td>\n      <td id=\"T_931ed_row0_col1\" class=\"data row0 col1\" >[' ', '!']</td>\n    </tr>\n    <tr>\n      <th id=\"T_931ed_level0_row1\" class=\"row_heading level0 row1\" >col2</th>\n      <td id=\"T_931ed_row1_col0\" class=\"data row1 col0\" >70.59%</td>\n      <td id=\"T_931ed_row1_col1\" class=\"data row1 col1\" >['*', '+']</td>\n    </tr>\n    <tr>\n      <th id=\"T_931ed_level0_row2\" class=\"row_heading level0 row2\" >col3</th>\n      <td id=\"T_931ed_row2_col0\" class=\"data row2 col0\" >2.94%</td>\n      <td id=\"T_931ed_row2_col1\" class=\"data row2 col1\" >['???#']</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "f6fc98259b4d40318184835742cb3754": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "a1d2513211be47d4bcf9bc4404f4f352": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "bfcdda9fa2e0480f944d6167143b18e0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "bf2677b3e5fa40d0b108f21a67d07b69": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "edea85a29bd8418ebfa8a3b2c122194e"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.053 seconds)


.. _sphx_glr_download_checks_gallery_tabular_data_integrity_plot_special_chars.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_special_chars.py <plot_special_chars.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_special_chars.ipynb <plot_special_chars.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
